<resources>
    <string name="app_name">MovieDb</string>
    <string name="poster">Poster</string>
    <string name="loading">Loading…</string>
    <string name="formatted_release_date">| %1$s</string>
    <string name="type">%1$s, %2$d %3$s - %4$s</string>
    <plurals name="number_of_episodes">
        <item quantity="one">ep</item>
        <item quantity="other">eps</item>
    </plurals>
    <string name="runtime_tv">%1$d m/ep</string>
    <string name="runtime_movie">%1$d m</string>
    <string name="more_title">Pop up full title</string>
    <string name="trailer">Trailer</string>
    <string name="cover">Background</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="series">Series</string>
    <string name="app_tagline">Movie Catalogue</string>
    <string name="loading_number">0</string>
    <string name="view_more">View more&#160;</string>
    <string name="recommendation">Recommendation</string>
    <string name="discover_tagline">Discover your new shows</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="latest_release">Latest release</string>
    <string name="now_playing">Watch now</string>
    <string name="trending">Trends today</string>
    <string name="discover">Discover</string>
    <string name="latest_release_movies">Latest release movies</string>
    <string name="now_playing_movies">Watch now</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="recommendations_movies">Recommendations</string>
    <string name="latest_release_tv_shows">Latest release tv shows</string>
    <string name="on_the_air_tv_shows">On the air tv shows</string>
    <string name="top_rated_tv_shows">Top rated tv shows</string>
    <string name="popular_tv_shows">Popular tv shows</string>
    <string name="recommendations_tv_shows">Recommendations</string>
    <string name="search">Search</string>
    <string name="youtube_search_query">https://www.youtube.com/results?search_query=%1$s %2$s Trailer</string>
    <string name="toast_data_loading">Please wait…</string>
    <string name="favorite">Favorite</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="remove_favorite">Remove from Favorites</string>
    <string name="remove_favorite_confirmation">Are you sure want to remove %1$s from favorites?</string>
    <string name="close">Close</string>
    <string name="reset">Reset&#160;</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="release_date">Release date</string>
    <string name="success_remove">Removed successfully</string>
    <string name="empty_search_result_title">No result found</string>
    <string name="empty_search_result_desc">We couldn\'t find the title you were looking for.</string>
    <string name="empty_favorite_title">It\'s empty</string>
    <string name="empty_favorite_desc">Looks like you don\'t have anything in your list</string>
    <string name="back">Back</string>
    <string name="search_hint">Search movies or tv shows…</string>
    <string name="edit_filter">Edit and filter</string>
</resources>