<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_filter_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/filter"
        android:textSize="@dimen/font_nm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ib_close"
        app:layout_constraintStart_toEndOf="@+id/ib_close"
        app:layout_constraintTop_toTopOf="@+id/ib_close" />

    <TextView
        android:id="@+id/tv_reset"
        style="@style/ClickableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/ib_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_close" />

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sort"
        android:textSize="@dimen/font_sm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_close" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:chipSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_sort"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_title"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/MyTextAppearance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rating"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textAppearance="@style/MyTextAppearance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_release_date"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textAppearance="@style/MyTextAppearance" />
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/lyt_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cg_sort">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_apply"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>