<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".detail.DetailMediaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MovieDb.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_cover"
                style="@style/ImageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/cover"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MovieDb.PopupOverlay"
                app:title="@null">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_back"
                        style="@style/FloatingActionButton.Mini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:id="@+id/tv_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="16dp"
                        android:layout_toStartOf="@+id/fab_favorite"
                        android:layout_toEndOf="@+id/fab_back"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_favorite"
                        style="@style/FloatingActionButton.Mini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/favorite"
                        android:src="@drawable/ic_unfavorite" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/lyt_detail_media" />
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/lyt_detail_media"
        layout="@layout/layout_detail_media" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_trailer"
        style="@style/Button.Red"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        android:text="@string/trailer"
        app:icon="@drawable/ic_trailer"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:layout_anchorGravity="bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>