<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_discover"
    style="@style/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.discover.DiscoverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/blue"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/discover_tagline"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_md"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                style="@style/SearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:queryHint="@string/search_hint" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp"
                app:chipSpacingHorizontal="8dp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_popular"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_upcoming"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_latest_release"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_release"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_top_rated"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:textAppearance="@style/MyTextAppearance" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/tv_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/tv_view_more_movie"
                    android:drawablePadding="8dp"
                    android:text="@string/loading"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_nm"
                    app:drawableStartCompat="@drawable/ic_movie_tag_47_18" />

                <TextView
                    android:id="@+id/tv_view_more_movie"
                    style="@style/ClickableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_more"
                    android:textSize="@dimen/font_sm" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_media_horiz_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <com.MovieDb.app.core.ui.custom.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_movie"
                        style="@style/RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp" />
                </com.MovieDb.app.core.ui.custom.NestedScrollableHost>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/tv_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/tv_view_more_tv"
                    android:drawablePadding="8dp"
                    android:text="@string/loading"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_nm"
                    app:drawableStartCompat="@drawable/ic_tv_tag_60_18" />

                <TextView
                    android:id="@+id/tv_view_more_tv"
                    style="@style/ClickableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_more"
                    android:textSize="@dimen/font_sm" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_media_horiz_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <com.MovieDb.app.core.ui.custom.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tv"
                        style="@style/RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp" />
                </com.MovieDb.app.core.ui.custom.NestedScrollableHost>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>